manifests/kube-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeweb
  labels:
    app: kube
spec:
  selector:
    app: kube
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
