manifests/kube-ingress-static-ip.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: httpkube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-web
          servicePort: 80
